@@ -1,3 +1,7 @@
+2009-02-08
+- backward compatibility with tint-0.6 (convert config file)
+  feature freeze until next release. need bug correction.
+
 2009-02-07
 - better multi-monitor capability :
   -> panel_monitor = all : tint2 draw one panel per monitor
